@@ -35,7 +35,7 @@ plugins {
 }
 
 group = "de.tum.in.www1.artemis"
-version = "4.4.5"
+version = "4.4.6"
 description = "Interactive Learning with Individual Feedback"
 
 sourceCompatibility=14
@@ -78,9 +78,10 @@ spotless {
             exclude "**/src/main/java/de/tum/in/www1/artemis/service/connectors/BambooService.java", "**/src/main/java/de/tum/in/www1/artemis/config/SecurityConfiguration.java", "**/src/test/resources/test-data/repository-export/EncodingISO_8559_1.java", "**/node_modules/**", "**/out/**", "**/repos/**", "**/build/**", "**/src/main/generated/**", "**/src/main/resources/templates/**"
         }
         importOrderFile "artemis-spotless.importorder"
-        removeUnusedImports()
-
         eclipse().configFile "artemis-spotless-style.xml"
+
+        // the following command is not compatible with Java14 switch expressions
+//        removeUnusedImports()
     }
 }
 
@@ -90,9 +91,14 @@ springBoot {
     mainClassName = "de.tum.in.www1.artemis.ArtemisApp"
 }
 
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
 // Execute the test cases: ./gradlew executeTests
 
 test {
+    jvmArgs(['--enable-preview'])
     useJUnitPlatform()
     exclude "**/*IT*", "**/*IntTest*", "**/*CucumberIT*"
     testLogging.showStandardStreams = true
@@ -104,6 +110,7 @@ test {
 }
 
 task integrationTest(type: Test) {
+    jvmArgs(['--enable-preview'])
     description = "Execute integration tests."
     group = "verification"
     include "**/*IT*", "**/*IntTest*"
@@ -141,7 +148,8 @@ jacocoTestCoverageVerification {
             limit {
                 counter = 'LINE'
                 value = 'COVEREDRATIO'
-                minimum = 0.70
+                // TODO: in the future the following value should become at least 0.80
+                minimum = 0.76
             }
         }
     }
@@ -226,8 +234,8 @@ dependencies {
     implementation "org.springframework.ldap:spring-ldap-core:2.3.3.RELEASE"
     implementation "org.springframework.data:spring-data-ldap:2.3.3.RELEASE"
 
-    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.4.RELEASE"
-    implementation "org.springframework.cloud:spring-cloud-starter-config:2.2.4.RELEASE"
+    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.5.RELEASE"
+    implementation "org.springframework.cloud:spring-cloud-starter-config:2.2.5.RELEASE"
     implementation "org.springframework.boot:spring-boot-starter-cloud-connectors:2.2.9.RELEASE"
 
     // https://docs.spring.io/spring/docs/4.3.15.RELEASE/spring-framework-reference/html/websocket.html#websocket-stomp-handle-broker-relay
@@ -332,7 +340,7 @@ tasks.withType(Test) {
 }
 
 wrapper {
-    gradleVersion = "6.6"
+    gradleVersion = "6.6.1"
 }
 
 task stage(dependsOn: "bootWar") {
@@ -349,7 +357,7 @@ if (project.hasProperty("nodeInstall")) {
 
 // Command to execute the JavaDoc checkstyle verification ./gradlew checkstyleMain
 checkstyle {
-    toolVersion "8.10"
+    toolVersion "8.36"
     configFile file("${rootDir}/checkstyle.xml")
     checkstyleTest.enabled = false
     maxErrors = 0
